Fix: Adicionar novas validacoes(e corrgir outras) em service, controller, DTOs e Models.